# backtestsh

./: .gitignore  README.md  pyproject.toml
app/: cipher.md  cli.py  strategy.py
app/agents/: __init__.py  prompt_expander.py  strategy_backtester.py
app/tools/: __init__.py  base.py  new_strategy.py  run_backtest.py  save_code.py
tests/: test_strategy.py
